css/index.css
body {
    font-family: Arial;
    margin: 0px;   
}

/* Navigation bar */
.divNavRow {
    align-items: baseline; /* align text */
    background-image: url('img/bgNavigationBar.jpg');
    background-size: contain;
    border-bottom: 1px solid black;
    color: #7a7a7a; 
    display: flex;
    font-weight: bold;
    justify-content: center;
    padding: 0px 15%;
}

#divName {
    color: white;
    font-size: 30px;
    padding: 0 1%;
    text-align: center;
    white-space: nowrap; /* prevent name being wrapped */
    width: 23%;
}

.divNavCol {   
    font-size: 18px;
    padding: 50px 1%;
    text-align: center;
    width: 13%; 
}

.divNavCol.divHover:hover {
    background: #0f0f0f;
    color: white;
    cursor: pointer;
    opacity: 0.5;
    text-decoration: underline;  
}

.divSelected {
    background: #0f0f0f;
    color: white;
    cursor: auto;
    opacity: 0.5;
    text-decoration: underline;  
}

/* Main Content */
.divMainBody {
    background-color: silver;
    height: 350px;
    padding: 0px 15%;
}

.divContentBody {  
    display: none;
}

/* Footer */
.divFooter {
    align-content: center;
    background-image: linear-gradient(#121212, #4a4a4a);
    border-top: 1px solid black;
    display: flex;
    height: 100px;
    justify-content: center;
    padding: 0px 15%;
}

.divIcon {
    position: relative;
}

.ftrIconText {
    bottom: 10px;
    color: white;
    font-size: 10px;
    font-weight: bold;
    left: 0px;
    position: absolute;
    right: 0px;
    text-align: center;
    visibility: hidden;
    white-space: nowrap;
}

.ftrIcon {
    border-radius: 24px;
    cursor: pointer;
    height: 50px;
    margin: 18px 25px;
    width: 50px;
}

.divIcon:hover .ftrIconText {
    visibility: visible;
}

.divIcon:hover .ftrIcon {
    box-shadow: 0px 0px 15px black;
}

